Fixed Mobile Sizing
Fixed the ugly modal on mobile, aligns correctly and overflows if needed (it'll be needed!)

--- a/source/main.css
+++ b/source/main.css
@@ -12,23 +12,12 @@ body {
     width: 100%;
     height: 100%;
 }
-.title {
-    padding-left: 3vh;
-    padding-top: 1vh;
-}
-.name {
-    display: inline-block;
-}
-#container {
+#modal {
     visibility: hidden;
     border-radius: 10px;
     background-color: white;
-    margin-top: 15%;
-    width: 33%;
-    height: 10%;
-    margin-left: 33%;
+    height:fit-content;
     z-index: 98;
-    position: absolute;
 }
 
 #loading {
